# arcus

./: .gitignore  FEATURE_RECOMMENDATIONS.md  README.md  SESSION.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: Dropdown.tsx  JsonTree.tsx  curl.ts  http.ts  main.tsx  postman.ts  storage.ts  styles.css  types.ts  windowControls.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: http.rs  lib.rs  main.rs
