[package]
name = "postman-tauri"
version = "0.1.0"
description = "A lightweight Postman-like API client built with Tauri"
authors = ["urip"]
edition = "2021"

[lib]
name = "postman_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "zstd", "cookies"] }
